# django-webmention

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  Pipfile  README.md  README.rst  conftest.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  runtests.py  setup.cfg  setup.py
.github/workflows/: ci.yaml  lint-python-package.yml  packaging.yml  test-python-package.yml
src/webmention/: admin.py  checks.py  middleware.py  models.py  resolution.py  urls.py  views.py
src/webmention/migrations/: 0001_initial.py
tests/: test_middleware.py  test_models.py  test_resolution.py  test_settings.py  test_urls.py  test_views.py
webmention/: __init__.py  admin.py  checks.py  middleware.py  models.py  resolution.py  urls.py  views.py
webmention/migrations/: 0001_initial.py
webmention/tests/: test_middleware.py  test_models.py  test_resolution.py  test_settings.py  test_urls.py  test_views.py
