[project]
name = "django-webmention"
version = "4.0.0"
description = "A pluggable implementation for receiving webmentions for Django projects"
authors = [
    { name = "Dane Hillard", email = "github@danehillard.com" },
]
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "Django>=4.2.0",
    "requests>=2.32.3",
]
dynamic = ["readme"]

[project.urls]
Repository = "https://github.com/easy-as-python/django-webmention"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test*"]

[tool.setuptools.dynamic]
readme = { file = "README.md", content-type = "text/markdown" }

######################
# Tool configuration #
######################

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313", "py314"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
show_error_context = true
pretty = true
namespace_packages = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "django.core.urlresolvers",
]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
omit = [
    "manage.py",
    "webmention/checks.py",
    "*test*",
    "*/migrations/*",
    "*/admin.py",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = true

[tool.coverage.paths]
source = [
    "src/webmention",
    "*/site-packages/webmention",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = ["tests"]
addopts = ["-ra", "-q", "--cov=webmention"]
xfail_strict = true

[tool.tox]
envlist = [
    "py310-django4.2",
    "py310-django5.2",
    "py311-django4.2",
    "py311-django5.2",
    "py312-django4.2",
    "py312-django5.2",
    "py312-django6.0",
    "py313-django5.2",
    "py313-django6.0",
    "py314-django5.2",
    "py314-django6.0",
]

[tool.tox.env_run_base]
deps = [
    "pytest",
    "pytest-cov",
    "pytest-django",
]
commands = [
    ["pytest", { replace = "posargs", default = [], extend = true }],
]

[tool.tox.env."py310-django4.2"]
deps = [
    { replace = "ref", of = ["tool", "tox", "env_run_base", "deps"], extend = true },
    "Django>=4.2,<4.3",
]

[tool.tox.env."py310-django5.2"]
deps = [
    { replace = "ref", of = ["tool", "tox", "env_run_base", "deps"], extend = true },
    "Django>=5.2,<5.3",
]

[tool.tox.env."py311-django4.2"]
deps = [
    { replace = "ref", of = ["tool", "tox", "env_run_base", "deps"], extend = true },
    "Django>=4.2,<4.3",
]

[tool.tox.env."py311-django5.2"]
deps = [
    { replace = "ref", of = ["tool", "tox", "env_run_base", "deps"], extend = true },
    "Django>=5.2,<5.3",
]

[tool.tox.env."py312-django4.2"]
deps = [
    { replace = "ref", of = ["tool", "tox", "env_run_base", "deps"], extend = true },
    "Django>=4.2,<4.3",
]

[tool.tox.env."py312-django5.2"]
deps = [
    { replace = "ref", of = ["tool", "tox", "env_run_base", "deps"], extend = true },
    "Django>=5.2,<5.3",
]

[tool.tox.env."py312-django6.0"]
deps = [
    { replace = "ref", of = ["tool", "tox", "env_run_base", "deps"], extend = true },
    "Django>=6.0,<6.1",
]

[tool.tox.env."py313-django5.2"]
deps = [
    { replace = "ref", of = ["tool", "tox", "env_run_base", "deps"], extend = true },
    "Django>=5.2,<5.3",
]

[tool.tox.env."py313-django6.0"]
deps = [
    { replace = "ref", of = ["tool", "tox", "env_run_base", "deps"], extend = true },
    "Django>=6.0,<6.1",
]

[tool.tox.env."py314-django5.2"]
deps = [
    { replace = "ref", of = ["tool", "tox", "env_run_base", "deps"], extend = true },
    "Django>=5.2,<5.3",
]

[tool.tox.env."py314-django6.0"]
deps = [
    { replace = "ref", of = ["tool", "tox", "env_run_base", "deps"], extend = true },
    "Django>=6.0,<6.1",
]

[tool.tox.env.lint]
skip_install = true
deps = [
    "ruff",
]
commands = [
    ["ruff", "check", { replace = "posargs", default = ["--diff", "src/webmention", "tests"], extend = true }],
]

[tool.tox.env.format]
skip_install = true
deps = [
    "black",
]
commands = [
    ["black", { replace = "posargs", default = ["--check", "--diff", "src/webmention", "tests"], extend = true }],
]

[tool.tox.env.typecheck]
deps = [
    { replace = "ref", of = ["tool", "tox", "env_run_base", "deps"], extend = true },
    "mypy",
    "django-types",
    "types-requests",
]
commands = [
    ["mypy", { replace = "posargs", default = ["src/webmention", "tests"], extend = true }],
]

[tool.tox-gh-actions.python]
"3.10" = "py310-django4.2, py310-django5.2"
"3.11" = "py311-django4.2, py311-django5.2"
"3.12" = "py312-django4.2, py312-django5.2, py312-django6.0"
"3.13" = "py313-django5.2, py313-django6.0"
"3.14" = "py314-django5.2, py314-django6.0"
