[metadata]
name = django-webmention
version = 1.1.0
description = A pluggable implementation of webmention for Django projects
author = Dane Hillard
author_email = github@danehillard.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/easy-as-python/django-webmention
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Framework :: Django
    Framework :: Django :: 1.8
    Framework :: Django :: 1.9
    Framework :: Django :: 1.10
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Topic :: Internet :: WWW/HTTP :: Indexing/Search
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
package_dir = =src
packages = find:
install_requires =
    Django>=1.8.2
    requests>=2.7.0

[options.packages.find]
where = src

[options.extras_require]
test =
    coverage
    pytest
    pytest-cov
    pytest-django
lint =
    pyflakes
    black

[coverage:run]
branch = True
omit =
    manage.py
    setup.py
    webmention/checks.py
    *test*
    */migrations/*
    */admin.py
    */__init__.py

[coverage:report]
precision = 2
show_missing = True
skip_covered = True

[tool:pytest]
DJANGO_SETTINGS_MODULE = tests.test_settings
python_files =
    tests.py
    test_*.py
testdirs = tests
addopts = -ra -q --cov=webmention

[tox:tox]
envlist = {py35,py36,py37,py38}-django{1.11,2.1,2.2}

[testenv]
extras = test
commands =
    pytest {posargs}
deps =
    django1.11: Django>=1.11,<2
    django2.1: Django>=2.1,<2.2
    django2.2: Django>=2.2,<2.3

[testenv:lint]
extras = lint
commands =
    pyflakes src/webmention tests
    black --check src/webmention tests
