[metadata]
name = django-webmention
version = 3.0.0
description = A pluggable implementation of webmention for Django projects
author = Dane Hillard
author_email = github@danehillard.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/easy-as-python/django-webmention
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Topic :: Internet :: WWW/HTTP :: Indexing/Search
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir = =src
packages = find:
install_requires =
    Django>=2.2.0
    requests>=2.7.0

[options.packages.find]
where = src

[options.extras_require]
test =
    coverage
    pytest
    pytest-cov
    pytest-django
lint =
    pyflakes
    black

[coverage:run]
branch = True
omit =
    manage.py
    setup.py
    webmention/checks.py
    *test*
    */migrations/*
    */admin.py
    */__init__.py

[coverage:report]
precision = 2
show_missing = True
skip_covered = True

[tool:pytest]
DJANGO_SETTINGS_MODULE = tests.test_settings
python_files =
    tests.py
    test_*.py
addopts = -ra -q --cov=webmention

[tox:tox]
envlist = {py37,py38,py39,py310,py311}-django{3.2,4.0,4.1}

[testenv]
extras = test
commands =
    pytest {posargs}
deps =
    django3.1: Django>=3.2,<3.3
    django4.0: Django>=4.0,<4.1
    django4.1: Django>=4.1,<4.2

[testenv:lint]
extras = lint
commands =
    pyflakes src/webmention tests
    black --check src/webmention tests
